--- a/src/pages/calctest.astro
+++ b/src/pages/calctest.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from '@astro/content';
-import { calculateStreak, calculateAverage, calculateMedian, getMaxValue, getMinValue } from '../utils/calculations';
+import { calculateStreak, calculateAverage, calculateMedian, getMaxValue, getMinValue } from '../utils/chump_calculations';
 
 // Get Chumps collection from CMS
 const chumps = await getCollection('chump');
