--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import theme from "@/data/theme";
 import SEOTags from "@/components/seo/SEOTags.astro";
 
 import "@fontsource/open-sans";
+import "@/styles/monty.css";
 import "@/styles/tailwind.css";
 import "@/styles/post.css";
 
@@ -20,12 +21,29 @@ const { title } = Astro.props;
   <SEOTags title={title} />
 
   <body
-    class="mx-auto flex min-h-screen max-w-[872px] flex-col gap-9 bg-neutral-950 px-10 py-8 text-sm text-neutral-400 md:gap-20 md:py-16"
+    class="mx-auto flex min-h-screen max-w-xl flex-col px-5 py-2 text-sm gap-3 md:py-8 bg-yellow-50 background  mr-auto ml-auto"
   >
-    <Header />
-    <BlurCircle position="top" color={theme.colors.blur.top} />
-    <BlurCircle position="bottom" color={theme.colors.blur.bottom} />
-    <slot />
+  <div class="header_image_container">
+    <img src="images/monty_header_transparent.png" alt="monty" class="header_image" />
+  </div>
+
+    <div class="main_container flex flex-col gap-2 py-2 px-2 max-w-xl mx-auto">
+      <slot />
+      <Header />
+      <div class="center-everything" style="flex-direction: column">
+        <a href='https://www.free-website-hit-counter.com'>
+          <img src='https://www.free-website-hit-counter.com/zc.php?d=9&id=2412&s=2' border='0' alt='Free Website Hit Counter'>
+        </a>
+        <br />
+        <br />
+        <small>
+          <a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">
+            Free website hit counter
+          </a>
+        </small>
+      </div>
+    </div>
+
     <style is:global>
       html {
         font-family: "Open Sans";
