--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { getCollection } from "astro:content";
 
 import Layout from "@/layouts/Layout.astro";
+import DancingText from "@/components/shared/DancingText.astro";
 import SocialLinks from "@/components/SocialLinks.astro";
 import PostCard from "@/components/PostCard.astro";
 import ProjectCard from "@/components/ProjectCard.astro";
@@ -10,46 +11,55 @@ import convertAsteriskToStrongTag from "@/utils/convertAsteriskToStrongTag";
 
 import presentation from "@/data/presentation";
 import projects from "@/data/projects";
+import { enrichChumpData } from "@/utils/chump_calculations";
 
 const posts = await getCollection("posts");
+let rawChumps = await getCollection("chumps");
+let enrichedChumps = enrichChumpData(rawChumps);
+
+// newest chump
+const newestChump = enrichedChumps[0];
 ---
 
 <Layout>
-  <main class="flex flex-col gap-20">
-    <article class="flex flex-col gap-8">
-      <h1 class="text-3xl text-neutral-100">{presentation.title}</h1>
-      <h2
-        class="max-w-[60ch] leading-6"
-        set:html={convertAsteriskToStrongTag(presentation.description)}
-      />
-      <SocialLinks />
+  <main class="flex flex-col gap-20 main_container max-w-96">
+    <article class="flex flex-col gap-4 text-center">
+      <!-- center text -->
+      <div class="cute-border flex flex-row justify-center items-center gap-2 h-24" style="flex-direction: column; height: fit-content;">
+        <div class="days_container" style="display: flex; flex-direction: row; align-items: center; height: 100px;">
+          <DancingText text={newestChump.data.streak.toString()} /> 
+          <div>
+            days
+          </div>
+        </div>
+        <div class="days_as_of" style="display: flex; flex-direction: row; align-items: center;">
+          <h2>
+          as of {newestChump.data.name} on {newestChump.data.date.toLocaleDateString("en-GB", {
+          weekday: "long",
+          day: "numeric",
+          month: "long",
+          year: "numeric",
+          })}
+          </h2>
+        </div>
+      </div>
+
+      <!-- <div class="gif-border">
+        <img
+          src={newestChump.data.image}
+          alt={newestChump.data.name}
+          class="w-full h-auto cute-border -z-10"
+      </div> -->
+
+      <div class="parent">
+        <img class="image1" src={newestChump.data.image}/>
+        <img class="image2" src="images/fire_border_60_speed.gif" />
+      </div>
+
+      <!-- <SocialLinks /> -->
     </article>
 
-    <article class="flex flex-col gap-8">
-      <header class="flex w-full flex-row justify-between gap-2">
-        <h3 class="text-lg text-neutral-100">Latest posts</h3>
-        <Link href="/posts" label="See all posts" isUnderline target="_self" />
-      </header>
-      {posts.length === 0 && <p>Soon, stay connected 👀...</p>}
-
-      <section class="flex flex-col gap-4 md:flex-row md:flex-wrap">
-        {
-          posts.length !== 0 &&
-            posts
-              .slice(0, 2)
-              .map((post) => (
-                <PostCard
-                  publishedAt={post.data.publishedAt}
-                  title={post.data.title}
-                  description={post.data.description}
-                  slug={post.slug}
-                />
-              ))
-        }
-      </section>
-    </article>
-
-    <article class="flex flex-col gap-8">
+    <!-- <article class="flex flex-col gap-8">
       <header class="flex w-full flex-row justify-between gap-2">
         <h3 class="text-lg text-neutral-100">
           Selected projects ({projects.length})
@@ -63,9 +73,9 @@ const posts = await getCollection("posts");
             projects.map((project) => <ProjectCard {...project} />)
         }
       </section>
-    </article>
+    </article> -->
 
-    <article class="flex flex-col gap-8">
+    <!-- <article class="flex flex-col gap-8">
       <header class="flex w-full flex-row justify-between gap-2">
         <h3 class="text-lg text-neutral-100">Get in touch</h3>
       </header>
@@ -77,6 +87,6 @@ const posts = await getCollection("posts");
       </p>
 
       <SocialLinks />
-    </article>
+    </article> -->
   </main>
 </Layout>
