--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,4 @@
 ---
-import Header from "../components/Header.astro";
-import BlurCircle from "@/components/shared/BlurCircle.astro";
-import theme from "@/data/theme";
 import SEOTags from "@/components/seo/SEOTags.astro";
 
 import "@fontsource/open-sans";
@@ -14,25 +11,122 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+
+import removeTrailingSlash from "@/utils/removeTrailingSlash";
+
+const pathname = removeTrailingSlash(Astro.url.pathname);
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <SEOTags title={title} />
+  <link rel="stylesheet" href="/css/wordart/style.css" />
 
-  <body
-    class="mx-auto flex min-h-screen max-w-xl flex-col px-5 py-2 text-sm gap-3 md:py-8 bg-yellow-50 background  mr-auto ml-auto"
-  >
-  <div class="header_image_container">
-    <img src="images/monty_header_transparent.png" alt="monty" class="header_image" />
-  </div>
+  <body class="mx-auto flex min-h-screen max-w-xl flex-col px-5 py-2 text-sm gap-3 bg-yellow-50 monty_background  mr-auto ml-auto">
+    <!-- Header -->
 
+    <div class="header_image_container">
+      <img src="images/monty_header_transparent.png" alt="monty" class="header_image" />
+    </div>
+
+    <!-- Main Content, two columns -->
     <div class="main_container flex flex-col gap-2 py-2 px-2 max-w-xl mx-auto">
-      <slot />
-      <Header />
-      <div class="center-everything" style="flex-direction: column">
+      
+      <!-- ? -->
+      <main class="flex flex-row gap-3 main_container">
+      
+        <!-- Left Hand Menu -->
+        <!-- <div id="left-hand-menu" class="left-hand-menu cute-border">
+          <h2 class="menu_header">Menu</h2>
+      
+          <hr/>
+          <nav role="navigation" style="">
+            <ul role="list" class="">
+              <li style="">
+                <a
+                  href="/"
+                  class:list={{
+                    ["hover:text-amber-500"]: true,
+                    ["text-black"]: pathname === "/",
+                  }}>
+                    <img src="/images/common/home3.gif" alt="home" style=""/>
+                  </a>
+              </li>
+              <li style="">
+                <a
+                  href="/history"
+                  class:list={{
+                    ["hover:text-amber-500"]: true,
+                    ["text-black"]: pathname === "/history",
+                  }}>
+                    <img src="/images/common/fzghistorygif.gif" alt="history" style=""/>
+                  </a>
+              </li>
+              <li>
+                <a
+                  href="/"
+                  class:list={{
+                    ["hover:text-amber-500"]: true,
+                    ["text-black"]: pathname === "/",
+                  }}>
+                    <img src="images/general/stats_28929.gif" alt="history" style=""/>
+                  </a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div> -->
+        <div>
+          <slot />
+        </div>
+      </main>
+
+      
+
+      <div class="center-everything cute-border" style="flex-direction: column">
+
+      <footer class="mb-3 z-40 flex w-full flex-col gap-2 md:flex-row md:justify-between h-7" style="justify-content: center;">
+        <nav role="navigation" style="height: 100%;">
+          <ul role="list" class="flex flex-row gap-2 items-center h-full" style="justify-content: center;">
+            <li style="height: 100%;">
+              <a
+                href="/"
+                class:list={{
+                  ["hover:text-amber-500"]: true,
+                  ["text-black"]: pathname === "/",
+                }}>
+                  <img src="/images/common/home3.gif" alt="home" style="height: 100%;"/>
+                </a>
+            </li>
+            <li>/</li>
+            <li style="height: 100%;">
+              <a
+                href="/history"
+                class:list={{
+                  ["hover:text-amber-500"]: true,
+                  ["text-black"]: pathname === "/history",
+                }}>
+                  <img src="/images/common/fzghistorygif.gif" alt="history" style="height: 100%;"/>
+                </a>
+            </li>
+            <li>/</li>
+            <li>
+              <a
+                href="/"
+                class:list={{
+                  ["hover:text-amber-500"]: true,
+                  ["text-black"]: pathname === "/",
+                }}>
+                  <img src="images/general/stats_28929.gif" alt="history" style=""/>
+                </a
+              >
+            </li>
+          </ul>
+        </nav>
+      </footer>
+
         <a href='https://www.free-website-hit-counter.com'>
-          <img src='https://www.free-website-hit-counter.com/zc.php?d=9&id=2412&s=2' border='0' alt='Free Website Hit Counter'>
+          <img src='https://www.free-website-hit-counter.com/zc.php?d=9&id=2412&s=2' alt='Free Website Hit Counter'>
         </a>
         <br />
         <br />
